--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 project("KokkosEDPLogger")
 set(CMAKE_CXX_STANDARD 20)
-add_library(SHARED LibKokkosEDPLogger.cpp)
+add_library(KokkosEDPLogger SHARED LibKokkosEDPLogger.cpp)
